@@ -2,7 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2016 PHP 7.0.13
 
-
+- Core:
+  . Fixed bug #73181 (parse_str() without a second argument leads to crash).
+    (Nikita)
 
 13 Oct 2016 PHP 7.0.12
 
